--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -53,12 +53,23 @@
       flex-grow: 1;
     }
     .submitButton {
+      cursor: pointer;
       margin: 11px 0;
       width: 103px;
       height: 43px;
       border: 2px solid #000;
       border-radius: 20px;
       background-color: #fff;
+    }
+    .deleteButton{
+      cursor: pointer;
+      margin: 11px 0;
+      width: 103px;
+      height: 43px;
+      border: 2px solid #fff;
+      border-radius: 20px;
+      color: #fff;
+      background-color: red;
     }
   }
 }
