--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,17 +4,8 @@
   align-items: center;
   background-color: #fff;
   padding: 20px;
+  border-bottom: 2px solid #e5e5e5;
   .logo {
     height: 100px;
-  }
-  .addButton {
-    cursor: pointer;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
-    height: 50px;
-    border: 2px solid #000;
-    border-radius: 30px;
-    background-color: #fff;
   }
 }
