--- a/src/components/Playlist/Playlist.module.scss
+++ b/src/components/Playlist/Playlist.module.scss
@@ -1,17 +1,29 @@
-.playlistWrap{
-    padding-top: 20px;
-    .search{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .searchInput{
-            width: 100%;
-            height: 30px;
-            font-size: 15px;
-        }
-        .searchImg{
-            margin-right: 20px;
-            height: 20px;
-        }
+.playlistWrap {
+  padding: 20px 10px;
+  background-color: #fff;
+  .search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .searchInput {
+      width: 100%;
+      height: 30px;
+      font-size: 15px;
     }
+    .searchImg {
+      margin-right: 20px;
+      height: 20px;
+    }
+  }
+  .addButton {
+    margin: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 600;
+    height: 50px;
+    border: 2px solid #000;
+    border-radius: 30px;
+    background-color: #fff;
+  }
 }
